--- a/references/team-board.html
+++ b/references/team-board.html
@@ -23,7 +23,19 @@
             --project-green: #006b00;
         }
 
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #fff; padding: 25px; font-size: 13px; color: #222; overflow-x: auto; }
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            background-color: #fff; 
+            padding: 25px; 
+            font-size: 13px; 
+            color: #222; 
+            overflow-x: auto; 
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            width: max-content;
+            min-width: 100%;
+        }
         
         .board { display: flex; gap: 15px; align-items: flex-start; margin-bottom: 40px; min-width: max-content; }
 
@@ -77,11 +89,26 @@
         .wip-purple { background: #f4f1ff; }
 
         /* Footer - Anchoring the chaos */
-        .footer { display: flex; flex-direction: column; gap: 20px; margin-top: 50px; }
-        .legend-row { display: flex; gap: 12px; justify-content: flex-start; margin-bottom: 10px; }
-        .legend-item { padding: 6px 14px; border-radius: 0px; font-weight: 700; border: 1px solid rgba(0,0,0,0.1); }
+        .footer { 
+            display: flex; 
+            flex-direction: column; 
+            gap: 20px; 
+            margin-top: 50px; 
+            align-self: flex-end;
+            align-items: flex-end;
+            width: fit-content; 
+        }
+        .legend-row { display: flex; gap: 12px; justify-content: flex-end; margin-bottom: 10px; }
+        .legend-item { 
+            text-align: center; 
+            padding: 6px 14px; 
+            border-radius: 0px; 
+            font-weight: 700; 
+            border: 1px solid rgba(0,0,0,0.1); 
+            min-width: 120px;
+        }
 
-        .project-row { display: flex; gap: 12px; }
+        .project-row { display: flex; gap: 12px; justify-content: flex-end; }
         .project-block { 
             flex: 1; 
             background: var(--project-green); 
