style(ui): move green project block headers to top

--- a/references/team-board-example.html
+++ b/references/team-board-example.html
@@ -217,16 +217,20 @@
 
         <!-- Green Project Blocks -->
         <div class="grid grid-cols-5 gap-6 px-10">
-            <div class="bg-green-800 h-40 rounded flex flex-col items-center justify-center p-4 text-white relative">
-                <span class="font-bold text-lg mb-2">Project A</span>
+            <div class="bg-green-800 h-40 rounded flex flex-col items-center p-4 text-white relative">
+                <span class="font-bold text-lg mb-4">Project A</span>
                 <div class="bg-yellow-300 text-black px-4 py-2 font-bold rounded shadow-lg text-sm">ACME</div>
             </div>
-            <div class="bg-green-800 h-40 rounded flex items-center justify-center text-white font-bold text-lg">Jimmy</div>
-            <div class="bg-green-800 h-40 rounded flex items-center justify-center text-white font-bold text-lg">Salalah</div>
-            <div class="bg-green-800 h-40 rounded flex flex-col items-center justify-end p-4 text-white relative">
-                <span class="font-bold text-lg absolute top-8">Project D</span>
-                <div class="bg-yellow-300 text-black px-4 py-2 font-bold rounded shadow-lg text-sm absolute top-20 right-4">Funky</div>
+            <div class="bg-green-800 h-40 rounded flex flex-col items-center p-4 text-white relative">
+                <span class="font-bold text-lg mb-4">Jimmy</span>
+            </div>
+            <div class="bg-green-800 h-40 rounded flex flex-col items-center p-4 text-white relative">
+                <span class="font-bold text-lg mb-4">Salalah</span>
+            </div>
+            <div class="bg-green-800 h-40 rounded flex flex-col items-center p-4 text-white relative">
+                <span class="font-bold text-lg mb-4">Project D</span>
                 <div class="bg-yellow-100 text-black p-2 text-[10px] font-bold rounded shadow w-3/4 mb-2 text-center">Endpoint machine identity</div>
+                <div class="bg-yellow-300 text-black px-4 py-2 font-bold rounded shadow-lg text-sm absolute top-20 right-4">Funky</div>
             </div>
             <div class="bg-green-800 h-40 rounded flex flex-col items-center p-4 text-white relative overflow-visible">
                 <span class="font-bold text-lg mb-4">Semafor</span>
